--- a/InternasAnidadasCalculadora/app/src/main/res/values/strings.xml
+++ b/InternasAnidadasCalculadora/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">InternasAnidadas(Calculadora)</string>
+    <string name="app_name">InternasyAnidadas(Calculadora)</string>
 </resources>
